--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "projeto14-mywallet-front",
-  "private": true,
-  "version": "0.0.0",
+  "name": "mywallet-front",
+  "version": "0.8.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,18 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.2.6",
+    "axios": "^1.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6",
-    "sweetalert": "^2.1.2"
+    "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.5.14"
   }
 }
